[package]
name = "pallet-domains"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition.workspace = true
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
description = "Subspace domains pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
domain-runtime-primitives.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
hex-literal = { workspace = true, optional = true }
log.workspace = true
pallet-balances.workspace = true
pallet-subspace = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"] }
schnorrkel = { workspace = true, optional = true }
sp-consensus-slots.workspace = true
sp-consensus-subspace.workspace = true
sp-core.workspace = true
sp-domains.workspace = true
sp-domains-fraud-proof.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-subspace-mmr.workspace = true
sp-version = { workspace = true, features = ["serde"] }
subspace-core-primitives.workspace = true
subspace-runtime-primitives.workspace = true

[dev-dependencies]
domain-pallet-executive.workspace = true
hex-literal.workspace = true
pallet-subspace.workspace = true
pallet-timestamp.workspace = true
pallet-block-fees.workspace = true
sp-externalities.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "domain-runtime-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-balances/std",
    "pallet-subspace/std",
    "scale-info/std",
    "sp-consensus-slots/std",
    "sp-consensus-subspace/std",
    "sp-core/std",
    "sp-domains/std",
    "sp-domains-fraud-proof/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-subspace-mmr/std",
    "sp-version/std",
    "subspace-core-primitives/std",
    "subspace-runtime-primitives/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking",
    "frame-benchmarking/runtime-benchmarks",
    "sp-consensus-subspace/runtime-benchmarks",
    "pallet-subspace/runtime-benchmarks",
    "sp-domains/runtime-benchmarks",
    "sp-domains-fraud-proof/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "schnorrkel",
    "hex-literal",
]
