[package]
name = "pallet-grandpa-finality-verifier"
version = "0.1.0"
authors = ["Vedhavyas Singareddi <ved@subspace.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Pallet to verify GRANDPA finality proofs for Substrate based chains"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false }
finality-grandpa = { version = "0.16.1", default-features = false }
log = { version = "0.4.21", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
scale-info = { version = "2.11.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.199", optional = true }

# Substrate Dependencies

frame-support = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
frame-system = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }
sp-std = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee", default-features = false }

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", default-features = false }
sp-io = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee" }
sp-application-crypto = { git = "https://github.com/subspace/polkadot-sdk", rev = "9b8cdb87de8f1c0e6b48c468b6196d1d99eeabee" }

[features]
default = ["std"]
std = [
    "codec/std",
    "finality-grandpa/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "num-traits/std",
    "scale-info/std",
    "serde",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
